force-app/main/default/objects/Conduit_Agent__mdt/Conduit_Agent__mdt.object-meta.xml
<CustomObject>
    <label>Conduit Agent</label>
    <pluralLabel>Conduit Agents</pluralLabel>
</CustomObject>