force-app/main/default/objects/Conduit_Agent__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description
  >Clear this to switch the use case off without deleting its configuration.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>