force-app/main/default/objects/Conduit_Agent__mdt/fields/Agent_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_API_Name__c</fullName>
    <label>Agent API Name</label>
    <description
  >The Agent API Name exactly as shown in Agent Builder. This is usually not the display label and often ends in a numeric suffix.</description>
    <inlineHelpText
  >Copy this from Agent Builder. A mismatch here is the most common cause of an agent not being found.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>