force-app/main/default/objects/Conduit_Agent__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <description>What this use case is for. Not read by Apex.</description>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>